nested/visualstudio-vm.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "visualStudioVm": {
            "type": "object"
        }
    },
    "variables": {},
    "resources": [
        {
            "name": "[parameters('visualStudioVm').networkInterfaceName]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2018-10-01",
            "location": "[parameters('visualStudioVm').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('visualStudioVm').networkSecurityGroupName)]",
                "[concat('Microsoft.Network/virtualNetworks/', parameters('visualStudioVm').virtualNetworkName)]",
                "[concat('Microsoft.Network/publicIpAddresses/', parameters('visualStudioVm').publicIpAddressName)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[parameters('visualStudioVm').subnetRef]"
                            },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/publicIpAddresses', parameters('visualStudioVm').publicIpAddressName)]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[parameters('visualStudioVm').nsgId]"
                }
            }
        },
        {
            "name": "[parameters('visualStudioVm').networkSecurityGroupName]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-02-01",
            "location": "[parameters('visualStudioVm').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "custom",
                        "properties": {
                            "priority": 1001,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "8000",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "Tcp",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('visualStudioVm').virtualNetworkName]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-02-01",
            "location": "[parameters('visualStudioVm').location]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('visualStudioVm').addressPrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('visualStudioVm').subnetName]",
                        "properties": {
                            "addressPrefix": "[parameters('visualStudioVm').subnetPrefix]"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('visualStudioVm').publicIpAddressName]",
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "2019-02-01",
            "location": "[parameters('visualStudioVm').location]",
            "properties": {
                "publicIPAllocationMethod": "Static",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('visualStudioVm').publicIpdnsPrefix]"
                }
            }
        },
        {
            "name": "[parameters('visualStudioVm').virtualMachineName]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2018-10-01",
            "location": "[parameters('visualStudioVm').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('visualStudioVm').networkInterfaceName)]",
                "[concat('Microsoft.Storage/storageAccounts/', parameters('visualStudioVm').storageAccountName)]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('visualStudioVm').virtualMachineSize]"
                },
                "storageProfile": {
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('visualStudioVm').storageAccountType]"
                        }
                    },
                    "imageReference": {
                        "publisher": "MicrosoftVisualStudio",
                        "offer": "VisualStudio",
                        "sku": "VS-2017-Comm-Latest-WS2016",
                        "version": "latest"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces',parameters('visualStudioVm').networkInterfaceName)]"
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('visualStudioVm').vmName]",
                    "adminUsername": "[parameters('visualStudioVm').vmUsername]",
                    "adminPassword": "[parameters('visualStudioVm').vmPassword]",
                    "windowsConfiguration": {
                        "enableAutomaticUpdates": true,
                        "provisionVmAgent": true
                    }                    
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https://', parameters('visualStudioVm').StorageAccountName, '.blob.core.windows.net/')]"
                    }
                }
            }
        },
        {
            "name": "[parameters('visualStudioVm').StorageAccountName]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2018-07-01",
            "location": "[parameters('visualStudioVm').location]",
            "properties": {},
            "kind": "StorageV2",
            "sku": {
                "name": "[parameters('visualStudioVm').storageAccountType]"
            }
        }
    ],
    "outputs": {
        "adminUsername": {
            "type": "string",
            "value": "[parameters('visualStudioVm').vmUsername]"
        }
    }
}
